--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,24 @@
-flask 
-flask-cors 
-requests 
-beautifulsoup4 
-pandas 
-fake-useragent 
-openpyxl
-scikit-learn 
-numpy 
-nltk 
-joblib 
-datasets
-newspaper3k
-transformers 
-sentencepiece
-torch 
-torchvision 
-torchaudio
+beautifulsoup4
 biopython
+datasets
+fake-useragent
+flask
+flask-cors
+google-cloud-translate
+joblib
 lxml_html_clean
+mysql-connector-python
+news-paper3k
+numpy
+nltk
+openpyxl
+pandas
+requests
+scikit-learn
+sentencepiece
+torch
+torchaudio
+transformers
+torchvision
+gunicorn
+tqdm
